# algorytmy-projekt

./: CMakeLists.txt  Graf.cpp  Graf.hpp  PrzydzialZasobow.cpp  PrzydzialZasobow.hpp  README.md  graf10
include/: Drzewo.hpp  Graf.hpp  Interfejs.hpp  Node.hpp  PrzydzialZasobow.hpp  Random.cpp  Random.hpp  Wczytywanie.hpp
src/: Drzewo.cpp  Graf.cpp  Interfejs.cpp  Node.cpp  PrzydzialZasobow.cpp  Random.cpp  Wczytywanie.cpp  main.cpp  ola.cpp  wojtek.cpp
